# SDL2_GameOfLife

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
src/: GameOfLife.cpp  GameOfLife.h  headers.h  main.cpp
